--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Prototipo_facultad_musica_Page_test.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Prototipo_facultad_musica_Page_test.data.br",
-        frameworkUrl: buildUrl + "/Prototipo_facultad_musica_Page_test.framework.js.br",
-        codeUrl: buildUrl + "/Prototipo_facultad_musica_Page_test.wasm.br",
+        dataUrl: buildUrl + "/Prototipo_facultad_musica_Page_test.data.unityweb",
+        frameworkUrl: buildUrl + "/Prototipo_facultad_musica_Page_test.framework.js.unityweb",
+        codeUrl: buildUrl + "/Prototipo_facultad_musica_Page_test.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Prototipo_facultad_musica",
